Agragando animaciones a la seccion index y pizzas

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="Paginas/style.css">
 	<link rel="stylesheet" href="Paginas/mediaQueries.css">
 	<script src="https://kit.fontawesome.com/53b00674d6.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
 	<nav class="navbar">
@@ -25,7 +26,7 @@
 	</nav>	
 	<header>
 		<div class="header-content">
-			<h2>SABORES UNICOS</h2>
+			<h2 class="sabores">SABORES UNICOS</h2>
 			<div class="line"></div>
 			<h1>LA MEJOR PIZZERIA DEL MUNDO</h1>
 			<a href="#" class="ctn">Leer Mas</a>
