--- a/Paginas/trabaja.html
+++ b/Paginas/trabaja.html
@@ -25,7 +25,7 @@
 	    </nav>	
 	    <header>
 		    <div class="header-content">
-			<h2>SABORES UNICOS</h2>
+			<h2 class="sabores">SABORES UNICOS</h2>
 			<div class="line"></div>
 			<h1>LA MEJOR PIZZERIA DEL MUNDO</h1>
 			<a href="#" class="ctn">Leer Mas</a>
