aplicando algo mas de formato

--- a/Paginas/historia.html
+++ b/Paginas/historia.html
@@ -42,7 +42,7 @@
 
         <main class="container p-2">
             <div class="row">
-                <div class="col-6 p-3 bg-warning">
+                <div class="col-xs-6 p-3 bg-warning">
                     <h2>
                         Nuestra Historia
                     </h2>
@@ -54,7 +54,7 @@
                 La suma de las características de Rosendo son únicas e irrepetibles y conforman lo que se denomina: “El espíritu del lugar”.
                     </p>
                 </div>
-                <div class="col-3 p-6 bg-warning">
+                <div class="col-xs-3 p-6 bg-warning">
                     <img class="imgpizzeria" src="../img/pizzeria1.jpg" alt="">
                 </div>
             </div>
