--- a/Paginas/historia.html
+++ b/Paginas/historia.html
@@ -41,9 +41,9 @@
     </header> 
 
         <main class="container p-2">
-            <div class="row">
+            <div class="row mx-auto">
                 <div class="col-xs-6 p-3 bg-warning">
-                    <h2>
+                    <h2 class="historia text-center">
                         Nuestra Historia
                     </h2>
                     <p>
@@ -54,8 +54,8 @@
                 La suma de las características de Rosendo son únicas e irrepetibles y conforman lo que se denomina: “El espíritu del lugar”.
                     </p>
                 </div>
-                <div class="col-xs-3 p-6 bg-warning">
-                    <img class="imgpizzeria" src="../img/pizzeria1.jpg" alt="">
+                <div class="col-3 p-6 bg-warning">
+                    <img class="imgpizzeria mx-auto" src="../img/pizzeria1.jpg" alt="templo">
                 </div>
             </div>
         </main>
