--- a/Paginas/pizzas.html
+++ b/Paginas/pizzas.html
@@ -65,7 +65,7 @@
             
             </main>
 
-            <section class="pizzas" id="cards_men">
+            <section class="pizzas">
                 <div class="pizza">
                     <div class="imagen">
                         <img class="imagen_pizza" src="../img/1.jpg" alt="">
