--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Pizzeria Rosendo</title>
 </head>
-<body class="cuerpo_carrito">
+<body>
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top">
             <div class="container-fluid">
@@ -72,7 +72,7 @@
             </p>
 
         </div>
-        <div class="formulario">
+        <div class="formulario1">
             <div class="nombre">
                 <span>
                     <input type="Nombre" placeholder="Nombre" required>
