--- a/Paginas/historia.html
+++ b/Paginas/historia.html
@@ -57,7 +57,7 @@
             <div class="h">
                 <div class="his">
                     <h4>Nuestra historia</h4>
-                    <p><strong>Pizzeria Rosendo</strong> situada en el corazón de una ciudad apasionada y estimulante.
+                    <p><strong>Pizzería Rosendo</strong> situada en el corazón de una ciudad apasionada y estimulante.
                         Protagonista de los momentos dorados de la mítica Avenida Corrientes.
                         Testigo del infinito paso del tiempo que atraviesa la memoria emotiva de los porteños.
                         Una atmósfera que produce una experiencia auténtica que no puede ser vivida en otro lugar.
@@ -69,7 +69,7 @@
                 </div>
                 <div class="sectionpi">
                     <h4>Desde 2011</h4>
-                    <p>Nustro horno es traido del norte de Italia, de donde también es toda nuestra materia prima pensando en lacalidad y exclusividad de la misma.
+                    <p>Nustro horno es traido del norte de Italia, de donde también es toda nuestra materia prima pensando en la calidad y exclusividad de la misma.
                     </p>
                     <img class="imgpi" src="../img/oven.jpg" alt="">
                 </div>
