--- a/Paginas/pizzas.html
+++ b/Paginas/pizzas.html
@@ -101,7 +101,7 @@
                         
                         <h2>Especial Italiana de selección</h2>
                         <p>
-                            Mortadela italiana, pesto genoves y burrata. <strong>$1300</strong>
+                            Pomodoro Mutti, pesto genoves y burrata. <strong>$1250</strong>
                         </p>
                         <button><a href="./carrito.html"> Comprar  <i class="fas fa-cart-plus"></i></a></button>
                     </div>
