--- a/Paginas/carrito.html
+++ b/Paginas/carrito.html
@@ -58,22 +58,22 @@
         <div class="row g-5">
             <div class="col-md-5 col-lg-4 order-md-last">
                 <h4 class="d-flex justify-content-between align-items-center mb-3">
-                    <span class="text-primary">Su carrito con mucho sabor</span>
+                    <span class="text-primary">Su carrito con mucho sabor!</span>
                 </h4>
                 <ul class="list-group mb-3">
                     <li class="list-group-item d-flex justify-content-between lh-sm">
                         <div>
                             <h6 class="my-0"></h6>
-                            <small class="text-muted"></small>
+                            <small class="text-muted">Especial de la casa</small>
                         </div>
-                        <span class="text-muted"></span>
+                        <span class="text-muted">$1300</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between lh-sm">
                         <div>
                             <h6 class="my-0"></h6>
-                            <small class="text-muted"></small>
+                            <small class="text-muted">Especial Rosendo</small>
                         </div>
-                        <span class="text-muted"></span>
+                        <span class="text-muted">$1500</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between lh-sm">
                         <div>
@@ -87,7 +87,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between">
                         <span>Total</span>
-                        <strong></strong>
+                        <strong>$2800</strong>
                     </li>
                 </ul>
             </div>
