--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Pizzeria Rosendo</title>
+    <title>Pizzería Rosendo</title>
 </head>
 <body>
     <header>
@@ -64,7 +64,7 @@
 
             <h1>LA MEJOR PIZZA</h1>
 
-            <p class="t_2">No solo tenemos la mejor materia prima, tambien tenemos a los mejores pizzeros</p>
+            <p class="t_2">No solo tenemos la mejor materia prima, también tenemos a los mejores pizzeros</p>
     </div>
  
     <section>
